chore: Fixup example command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   datadog-sidekiq:
     build: .
-    command: -redis-host redis:6379 -statsd-host dogstatsd:8125 -tags tag1:value1,tag2,value2
+    command: -redis-host redis:6379 -statsd-host dogstatsd:8125 -tags tag1:value1,tag2:value2
     depends_on:
       - dogstatsd
       - redis
