--- a/compose.yaml
+++ b/compose.yaml
@@ -7,7 +7,7 @@ services:
       - redis
 
   dogstatsd:
-    image: jonmorehouse/dogstatsd-local
+    image: drish/dogstatsd-local
 
   redis:
     image: redis:alpine
